Fixes for audio widget width and z-index values for app-spinner and navbar.
(cherry picked from commit ae17795a79de30de9a2d274c4a5c71793572b37b)

--- a/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
+++ b/src/main/webapp/scripts/modules/layouts/device/styles/less/mobile.less
@@ -10,7 +10,7 @@
   top: 0;
   &.slide-over {
     left: -100%;
-    z-index: 1020;
+    z-index: 1061;
 
     &.visible {
       left: 0;
@@ -58,7 +58,7 @@
       height: @app-mobile-nav-height !important;
       width: 100%;
       position: fixed;
-      z-index: 1010;
+      z-index: 1060;
       display: table;
       top: 0;
       left: 0;
