--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1357,7 +1357,10 @@ If the height and width are not specified the video takes the height of the post
   height: 150px;
   width: 300px;
 }
-
+.app-audio {
+  position: relative;
+  width: 100%;
+}
 /********************************************************************************
 ********************************* prefab style classes *****************************
 *********************************************************************************/
